--- a/02_cross_entropy_frozenlake.ipynb
+++ b/02_cross_entropy_frozenlake.ipynb
@@ -11,20 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
+    "import os \n",
+    "import numpy as np\n",
+    "from collections import namedtuple\n",
+    "\n",
     "import gym\n",
     "import gym.spaces\n",
-    "from collections import namedtuple\n",
-    "import numpy as np\n",
-    "from tensorboardX import SummaryWriter\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
     "\n",
     "HIDDEN_SIZE = 128\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,22 +115,28 @@
     "    episode_steps = []\n",
     "    obs = env.reset()\n",
     "    sm = nn.Softmax(dim=1)\n",
+    "    \n",
     "    while True:\n",
     "        obs_v = torch.FloatTensor([obs])\n",
     "        act_probs_v = sm(net(obs_v))\n",
     "        act_probs = act_probs_v.data.numpy()[0]\n",
     "        action = np.random.choice(len(act_probs), p=act_probs)\n",
+    "        \n",
     "        next_obs, reward, is_done, _ = env.step(action)\n",
+    "        \n",
     "        episode_reward += reward\n",
     "        episode_steps.append(EpisodeStep(observation=obs, action=action))\n",
+    "        \n",
     "        if is_done:\n",
     "            batch.append(Episode(reward=episode_reward, steps=episode_steps))\n",
     "            episode_reward = 0.0\n",
     "            episode_steps = []\n",
     "            next_obs = env.reset()\n",
+    "            \n",
     "            if len(batch) == batch_size:\n",
     "                yield batch\n",
     "                batch = []\n",
+    "        \n",
     "        obs = next_obs\n",
     "\n",
     "\n",
@@ -142,10 +150,8 @@
     "    elite_batch = []\n",
     "    for example, discounted_reward in zip(batch, disc_rewards):\n",
     "        if discounted_reward > reward_bound:\n",
-    "            train_obs.extend(map(lambda step: step.observation,\n",
-    "                                 example.steps))\n",
-    "            train_act.extend(map(lambda step: step.action,\n",
-    "                                 example.steps))\n",
+    "            train_obs.extend(map(lambda step: step.observation, example.steps))\n",
+    "            train_act.extend(map(lambda step: step.action, example.steps))\n",
     "            elite_batch.append(example)\n",
     "\n",
     "    return elite_batch, train_obs, train_act, reward_bound"
@@ -163,50 +169,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "if __name__ == \"__main__\":\n",
-    "    random.seed(12345)\n",
-    "    env = DiscreteOneHotWrapper(gym.make(\"FrozenLake-v0\"))\n",
-    "    # env = gym.wrappers.Monitor(env, directory=\"mon\", force=True)\n",
-    "    obs_size = env.observation_space.shape[0]\n",
-    "    n_actions = env.action_space.n\n",
+    "random.seed(12345)\n",
+    "env = DiscreteOneHotWrapper(gym.make(\"FrozenLake-v0\"))\n",
+    "# env = gym.wrappers.Monitor(env, directory=\"mon\", force=True)\n",
+    "obs_size = env.observation_space.shape[0]\n",
+    "n_actions = env.action_space.n\n",
     "\n",
-    "    net = Net(obs_size, HIDDEN_SIZE, n_actions)\n",
-    "    objective = nn.CrossEntropyLoss()\n",
-    "    optimizer = optim.Adam(params=net.parameters(), lr=0.001)\n",
-    "    writer = SummaryWriter(comment=\"-frozenlake-tweaked\")\n",
+    "net = Net(obs_size, HIDDEN_SIZE, n_actions)\n",
+    "objective = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(params=net.parameters(), lr=0.001)\n",
+    "writer = SummaryWriter(comment=\"-frozenlake-tweaked\")\n",
     "\n",
-    "    full_batch = []\n",
-    "    for iter_no, batch in enumerate(iterate_batches(\n",
-    "            env, net, BATCH_SIZE)):\n",
-    "        reward_mean = float(np.mean(list(map(\n",
-    "            lambda s: s.reward, batch))))\n",
-    "        full_batch, obs, acts, reward_bound = \\\n",
-    "            filter_batch(full_batch + batch, PERCENTILE)\n",
-    "        if not full_batch:\n",
-    "            continue\n",
-    "        obs_v = torch.FloatTensor(obs)\n",
-    "        acts_v = torch.LongTensor(acts)\n",
-    "        full_batch = full_batch[-500:]\n",
+    "full_batch = []\n",
+    "for iter_no, batch in enumerate(iterate_batches(env, net, BATCH_SIZE)):\n",
+    "    reward_mean = float(np.mean(list(map(lambda s: s.reward, batch))))\n",
+    "    full_batch, obs, acts, reward_bound = filter_batch(full_batch + batch, PERCENTILE)\n",
+    "        \n",
+    "    if not full_batch:\n",
+    "        continue\n",
+    "        \n",
+    "    obs_v = torch.FloatTensor(obs)\n",
+    "    acts_v = torch.LongTensor(acts)\n",
+    "    full_batch = full_batch[-500:]\n",
     "\n",
-    "        optimizer.zero_grad()\n",
-    "        action_scores_v = net(obs_v)\n",
-    "        loss_v = objective(action_scores_v, acts_v)\n",
-    "        loss_v.backward()\n",
-    "        optimizer.step()\n",
-    "        print(\"%d: loss=%.3f, rw_mean=%.3f, \"\n",
-    "              \"rw_bound=%.3f, batch=%d\" % (\n",
-    "            iter_no, loss_v.item(), reward_mean,\n",
-    "            reward_bound, len(full_batch)))\n",
-    "        writer.add_scalar(\"loss\", loss_v.item(), iter_no)\n",
-    "        writer.add_scalar(\"reward_mean\", reward_mean, iter_no)\n",
-    "        writer.add_scalar(\"reward_bound\", reward_bound, iter_no)\n",
-    "        if reward_mean > 0.8:\n",
-    "            print(\"Solved!\")\n",
-    "            break\n",
-    "    writer.close()"
+    "    optimizer.zero_grad()\n",
+    "    action_scores_v = net(obs_v)\n",
+    "    loss_v = objective(action_scores_v, acts_v)\n",
+    "    loss_v.backward()\n",
+    "    optimizer.step()\n",
+    "        \n",
+    "    print(\"%d: loss=%.3f, rw_mean=%.3f, rw_bound=%.3f, batch=%d\" % (iter_no, loss_v.item(), reward_mean, reward_bound, len(full_batch)))\n",
+    "    writer.add_scalar(\"loss\", loss_v.item(), iter_no)\n",
+    "    writer.add_scalar(\"reward_mean\", reward_mean, iter_no)\n",
+    "    writer.add_scalar(\"reward_bound\", reward_bound, iter_no)\n",
+    "        \n",
+    "    if reward_mean > 0.8:\n",
+    "        print(\"Solved!\")\n",
+    "        break\n",
+    "\n",
+    "writer.close()"
    ]
   },
   {
